# acp-ws-bridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: code-reviewer.agent.md  rust-bridge-agent.agent.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: architecture.md  deployment.md  release.md  testing.md
scripts/: validate_agents.sh
src/: acp.rs  api.rs  bridge.rs  config.rs  copilot.rs  history.rs  main.rs  paths.rs  session.rs  stats_cache.rs  tls.rs  ws.rs
